<resources>
    <string name="app_name">Jackpot n Maths</string>
    <string name="jackpotgbk_button_start">Start/Stop</string>
    <string name="jackpotgbk_button_stop">Stop</string>

    <string name="back">Back</string>
    <string name="generate_username">Please generate a username</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_start_number">Enter Start Number</string>
    <string name="enter_stop_number">Enter Stop Number</string>
    <string name="generate">Generate</string>
    <string name="please_choose_your_options">Please choose your options:</string>
    <string name="phytagoras_calculator">Phytagoras Calculator</string>
    <string name="quadratic_factor_calculator">Quadratic Factor Calculator</string>
    <string name="tube_calculator">Tube Calculator</string>
    <string name="jackpotgbk_title">Jackpot GBK</string>
    <string name="exit">Exit</string>
    <string name="jackpotgbk_help">Jackpot GBK</string>
    <string name="pythagoras_calculator">Pythagoras Calculator</string>
    <string name="pc">(PC)</string>
    <string name="input_1st_number">Input 1st number</string>
    <string name="input_2nd_number">Input 2nd number</string>
    <string name="look_for">Look for :</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
</resources>
