<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhytagorasActivity"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pythagoras_calculator"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000000"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pc"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textColor="#000000"
        />


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="414dp"
        android:layout_height="351dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:srcCompat="@drawable/segitiga" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <EditText
            android:id="@+id/num1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_1st_number"
            android:inputType="number"
            android:layout_marginRight="20dp"
            android:textAlignment="center"
            />

        <EditText
            android:id="@+id/num2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/input_2nd_number"
            android:inputType="number"
            android:layout_marginLeft="20dp"
            android:textAlignment="center"
            />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/look_for"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textColor="#000000"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/countA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a"
            android:textSize="20sp"
            android:onClick="calculateA"
            android:background="@drawable/custom_btn_options"
            />

        <Button
            android:id="@+id/countB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/b"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="20sp"
            android:onClick="calculateB"
            android:background="@drawable/custom_btn_options"
            />

        <Button
            android:id="@+id/countC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/c"
            android:textSize="20sp"
            android:onClick="calculateC"
            android:background="@drawable/custom_btn_options"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />


    <TextView
        android:id="@+id/Result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/triangleAtt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"/>

</LinearLayout>