<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/mainTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/please_choose_your_options"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="toPhytagoras"
            android:background="@drawable/custom_btn"
            android:textColor="@android:color/white"
            android:text="@string/phytagoras_calculator" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="toQuadratic"
            android:background="@drawable/custom_btn"
            android:textColor="@android:color/white"
            android:text="@string/quadratic_factor_calculator" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="toTube"
            android:background="@drawable/custom_btn"
            android:textColor="@android:color/white"
            android:text="@string/tube_calculator" />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="toJackpotGBK"
            android:background="@drawable/custom_btn"
            android:textColor="@android:color/white"
            android:text="@string/jackpotgbk_title" />

    </LinearLayout>


</LinearLayout>